--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "mememaker",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/tannerpace/MemeMaker/",
