--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "https://github.com/tannerpace/MemeMaker/",
   "dependencies": {
-    "-": "0.0.1",
+    "-": "^0.0.1",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.1",
@@ -16,7 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "save-dev": "0.0.1-security",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
